--- a/project1/index.html
+++ b/project1/index.html
@@ -123,8 +123,12 @@
 
     <section class = 'foot'>
       RESULT
-      <section class = 'dealerScore'>dealer</section>
-      <section class = 'playerScore'>player</section>
+      <section class = 'dealerScore'>dealer</p>
+        <div id = 'dealerScoreID'>0</div>
+      </section>
+      <section class = 'playerScore'>player</p>
+        <div id = 'playerScoreID'>0</div>
+      </section>
     </section>
 
 
