--- a/project1/index.html
+++ b/project1/index.html
@@ -9,8 +9,14 @@
 
   </head>
   <body>
-    <button id = 'draw'>Draw</button>
-    <canvas id="canvas" width="500" height="500" style="border: 1px solid black"></canvas>
+    
+    <!--///////////////////////CANVAS/////////////////////////////////-->
+
+    <!-- <button id = 'draw'>Draw</button>
+    <canvas id="canvas" width="500" height="500" style="border: 1px solid black"></canvas> -->
+    <!--///////////////////END CANVAS/////////////////////////////////-->
+
+
   <div id='wrapper'>
     <header>
       BLACKJACK
