--- a/project1/index.html
+++ b/project1/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
 
+    <div id="div1">The text above has been created dynamically.</div>
     <!--///////////////////////CANVAS/////////////////////////////////-->
 
     <!-- <button id = 'draw'>Draw</button>
